# auto-invoicer

./: .gitignore  README.md  pyproject.toml  sample.env
.github/workflows/: send_invoice.yml
auto_invoicer/: create_workflow.py  generate_invoice.py
sample_output/: 2023-05-29.html
template/: invoice_template.md
